--- a/YourasMusic/src/yourasmusic/FXMLEstudioIndividual.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLEstudioIndividual.fxml
@@ -14,12 +14,12 @@
          <left>
             <Pane prefHeight="829.0" prefWidth="1010.0" styleClass="pane" stylesheets="@styles.css" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="nomeDir" alignment="CENTER" layoutX="1.0" layoutY="100.0" prefHeight="147.0" prefWidth="1016.0" text="nomeDiretor" textFill="WHITE">
+                  <Label fx:id="nomeDir" layoutX="86.0" layoutY="247.0" prefHeight="58.0" prefWidth="775.0" text="nomeDiretor" textFill="WHITE">
                      <font>
                         <Font size="31.0" />
                      </font>
                   </Label>
-                  <Label fx:id="moradaEstudio" layoutX="88.0" layoutY="400.0" prefHeight="61.0" prefWidth="850.0" text="morada" textFill="WHITE">
+                  <Label fx:id="moradaEstudio" layoutX="84.0" layoutY="411.0" prefHeight="61.0" prefWidth="850.0" text="morada" textFill="WHITE">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -29,7 +29,12 @@
                         <Font size="21.0" />
                      </font></Button>
                   <DatePicker fx:id="dtDataReserva" layoutX="88.0" layoutY="506.0" prefHeight="41.0" prefWidth="842.0" promptText="Selecione a data a Reservar" />
-                  <Label fx:id="moradaEstudio1" layoutX="88.0" layoutY="339.0" prefHeight="61.0" prefWidth="805.0" text="Morada:" textFill="WHITE">
+                  <Label fx:id="moradaEstudio1" layoutX="88.0" layoutY="186.0" prefHeight="61.0" prefWidth="805.0" text="Diretor" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="moradaEstudio11" layoutX="84.0" layoutY="350.0" prefHeight="61.0" prefWidth="805.0" text="Morada" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="40.0" />
                      </font>
