--- a/YourasMusic/src/yourasmusic/FXMLAlbuns.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLAlbuns.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -21,8 +20,7 @@
                         <Font size="31.0" />
                      </font>
                   </Label>
-                  <ComboBox layoutX="277.0" layoutY="62.0" prefHeight="40.0" prefWidth="347.0" style="-fx-background-color: #272727;" />
-                  <Button layoutX="731.0" layoutY="62.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="201.0" style="-fx-background-color: #272727;" text="Ver todos" textFill="WHITE" />
+                  <ComboBox fx:id="cmbTipoOrdenacao" layoutX="277.0" layoutY="62.0" onAction="#ordenarAlbuns" prefHeight="40.0" prefWidth="642.0" style="-fx-background-color: #272727;" />
                   <Label layoutX="79.0" layoutY="87.0" prefHeight="20.0" prefWidth="138.0" text="Mais ouvidos" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
