--- a/YourasMusic/src/yourasmusic/FXMLArtistas.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLArtistas.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -21,13 +20,7 @@
                         <Font size="31.0" />
                      </font>
                   </Label>
-                  <ComboBox layoutX="277.0" layoutY="62.0" prefHeight="40.0" prefWidth="347.0" style="-fx-background-color: #272727;" />
-                  <Button layoutX="731.0" layoutY="62.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="201.0" style="-fx-background-color: #272727;" text="Ver todos" textFill="WHITE" />
-                  <Label layoutX="79.0" layoutY="87.0" prefHeight="20.0" prefWidth="138.0" text="Mais ouvidos" textFill="WHITE">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
+                  <ComboBox fx:id="cmbTipoOrdenacao" layoutX="277.0" layoutY="62.0" onAction="#ordenarArtistas" prefHeight="40.0" prefWidth="646.0" style="-fx-background-color: #272727;" />
                </children>
             </Pane>
          </top>
