--- a/YourasMusic/src/yourasmusic/FXMLMusicas.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLMusicas.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -22,12 +22,12 @@
                         <Font size="31.0" />
                      </font>
                   </Label>
-                  <Button layoutX="731.0" layoutY="62.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="201.0" style="-fx-background-color: #272727;" text="Ver todos" textFill="WHITE" />
-                  <Label layoutX="79.0" layoutY="87.0" prefHeight="20.0" prefWidth="138.0" text="Mais ouvidas" textFill="WHITE">
+                  <Label layoutX="79.0" layoutY="87.0" prefHeight="20.0" prefWidth="247.0" text="Ultimas adicionadas" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
+                  <ComboBox fx:id="cmbGeneroMusica" layoutX="304.0" layoutY="65.0" onAction="#ordenarMusicas" prefHeight="44.0" prefWidth="656.0" promptText="Apresentar musicas do genero" />
                </children>
             </Pane>
          </top>
