--- a/YourasMusic/src/yourasmusic/FXMLRegistarAlbum.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLRegistarAlbum.fxml
@@ -15,16 +15,16 @@
          <left>
             <Pane prefHeight="829.0" prefWidth="1010.0" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="txfNomeAlbum" layoutX="236.0" layoutY="194.0" prefHeight="40.0" prefWidth="537.0" promptText="Nome do Album" />
+                  <TextField id="textfields_login_register" fx:id="txfNomeAlbum" layoutX="236.0" layoutY="194.0" prefHeight="40.0" prefWidth="537.0" promptText="Nome do Album" stylesheets="@styles.css" />
                   <ComboBox fx:id="cmbNomeEditora" layoutX="236.0" layoutY="254.0" prefHeight="40.0" prefWidth="538.0" promptText="Nome da Editora" />
-                  <TextField fx:id="txfLink" layoutX="238.0" layoutY="308.0" prefHeight="40.0" prefWidth="537.0" promptText="Link" />
-                  <TextField fx:id="txfAno" layoutX="238.0" layoutY="363.0" prefHeight="40.0" prefWidth="538.0" promptText="Ano" />
+                  <TextField id="textfields_login_register" fx:id="txfLink" layoutX="238.0" layoutY="308.0" prefHeight="40.0" prefWidth="537.0" promptText="Link" stylesheets="@styles.css" />
+                  <TextField id="textfields_login_register" fx:id="txfAno" layoutX="238.0" layoutY="363.0" prefHeight="40.0" prefWidth="538.0" promptText="Ano" stylesheets="@styles.css" />
                   <Label alignment="CENTER" layoutX="318.0" layoutY="102.0" prefHeight="24.0" prefWidth="375.0" text="Novo Album" textFill="WHITE">
                      <font>
                         <Font size="48.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txfEndereco" layoutX="239.0" layoutY="421.0" prefHeight="48.0" prefWidth="260.0" />
+                  <TextField id="textfields_login_register" fx:id="txfEndereco" layoutX="239.0" layoutY="421.0" prefHeight="48.0" prefWidth="260.0" stylesheets="@styles.css" />
                   <Button layoutX="507.0" layoutY="421.0" mnemonicParsing="false" onAction="#uploadCapa" prefHeight="48.0" prefWidth="268.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Carregar Capa" textFill="WHITE" />
                   <Button layoutX="240.0" layoutY="646.0" mnemonicParsing="false" onAction="#enviarUpload" prefHeight="65.0" prefWidth="536.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Confirmar" textFill="WHITE">
                      <font>
