--- a/YourasMusic/src/yourasmusic/FXMLRegistarEstudio.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLRegistarEstudio.fxml
@@ -13,7 +13,7 @@
             <Font size="39.0" />
          </font>
       </Label>
-      <TextArea fx:id="txaMorada" layoutX="205.0" layoutY="350.0" prefHeight="225.0" prefWidth="580.0" />
+      <TextArea id="textfields_login_register" fx:id="txaMorada" layoutX="205.0" layoutY="350.0" prefHeight="225.0" prefWidth="580.0" stylesheets="@styles.css" />
       <Label layoutX="205.0" layoutY="320.0" text="Morada *" textFill="WHITE">
          <font>
             <Font size="25.0" />
