--- a/YourasMusic/src/yourasmusic/FXMLUpload.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLUpload.fxml
@@ -19,14 +19,14 @@
             <Font size="26.0" />
          </font>
       </Label>
-      <TextField fx:id="nome" layoutX="150.0" layoutY="270.0" prefHeight="48.0" prefWidth="695.0" />
+      <TextField id="textfields_login_register" fx:id="nome" layoutX="150.0" layoutY="270.0" prefHeight="48.0" prefWidth="695.0" stylesheets="@styles.css" />
       <Label layoutX="154.0" layoutY="352.0" prefHeight="31.0" prefWidth="695.0" text="Genero" textFill="WHITE">
          <font>
             <Font size="26.0" />
          </font>
       </Label>
-      <ComboBox fx:id="genero" layoutX="150.0" layoutY="383.0" prefHeight="48.0" prefWidth="695.0" />
-      <TextField fx:id="endereco" layoutX="151.0" layoutY="484.0" prefHeight="48.0" prefWidth="332.0" />
+      <ComboBox fx:id="genero" editable="true" layoutX="150.0" layoutY="383.0" prefHeight="48.0" prefWidth="695.0" promptText="Selecione o genero da musica" />
+      <TextField id="textfields_login_register" fx:id="endereco" layoutX="151.0" layoutY="484.0" prefHeight="48.0" prefWidth="332.0" stylesheets="@styles.css" />
       <Button layoutX="218.0" layoutY="653.0" mnemonicParsing="false" onAction="#enviarUpload" prefHeight="65.0" prefWidth="507.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Confirmar">
          <font>
             <Font size="25.0" />
