--- a/YourasMusic/src/yourasmusic/FXMLEstudioIndividual.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLEstudioIndividual.fxml
@@ -39,6 +39,11 @@
                         <Font name="System Bold" size="40.0" />
                      </font>
                   </Label>
+                  <Label fx:id="lblAvisos" alignment="CENTER" layoutX="144.0" layoutY="699.0" prefHeight="16.0" prefWidth="723.0" textFill="#ff9b9b">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
          </left>
