--- a/YourasMusic/src/yourasmusic/FXMLMusicas.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLMusicas.fxml
@@ -2,20 +2,18 @@
 
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLMusicasController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLMusicasController">
    <children>
-      <BorderPane prefHeight="841.0" prefWidth="1032.0">
-         <center>
-            <TilePane fx:id="tileMusicas" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-         </center>
+      <BorderPane prefHeight="841.0" prefWidth="990.0">
          <top>
-            <Pane prefHeight="200.0" prefWidth="1029.0" BorderPane.alignment="CENTER">
+            <Pane prefHeight="200.0" prefWidth="990.0" BorderPane.alignment="CENTER">
                <children>
                   <Label layoutX="79.0" layoutY="29.0" prefHeight="76.0" prefWidth="138.0" text="Musicas" textFill="WHITE">
                      <font>
@@ -31,6 +29,17 @@
                </children>
             </Pane>
          </top>
+         <center>
+            <ScrollPane prefHeight="200.0" prefWidth="200.0" styleClass="pane" stylesheets="@styles.css" BorderPane.alignment="CENTER">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="2212.0" prefWidth="990.0" styleClass="pane" stylesheets="@styles.css">
+                     <children>
+                        <TilePane fx:id="tileMusicas" layoutX="46.0" layoutY="12.0" prefHeight="2189.0" prefWidth="999.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
